changed header and subtitle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Kelvin's website
+subtitle: This is where I will do all my HCI stuff
 use-site-title: true
 ---
 
